--- a/gold-admin-frontend/src/app/views/partials/layout/subheader/subheader4/subheader4.component.html
+++ b/gold-admin-frontend/src/app/views/partials/layout/subheader/subheader4/subheader4.component.html
@@ -1,6 +1,5 @@
 <!-- begin:: Content Head -->
-<div class="kt-subheader kt-grid__item" [ngClass]="{'kt-container--clear': clear}"
-	[hidden]="subheaderService.disabled$ | async" id="kt_subheader">
+<div class="kt-subheader kt-grid__item" [ngClass]="{'kt-container--clear': clear}" [hidden]="subheaderService.disabled$ | async" id="kt_subheader">
 	<div class="kt-container" [ngClass]="{'kt-container--fluid': fluid}">
 		<div class="kt-subheader__main">
 			<h3 *ngIf="title" class="kt-subheader__title">{{title}}</h3>
@@ -10,7 +9,7 @@
 				<a class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 				<ng-container *ngFor="let item of breadcrumbs">
 					<span class="kt-subheader__breadcrumbs-separator"></span>
-					<a [routerLink]="item.page" class="kt-subheader__breadcrumbs-link">
+					<a [routerLink]="item.page" [queryParams]="item.queryParams" class="kt-subheader__breadcrumbs-link">
 						{{item.title}}
 					</a>
 				</ng-container>
@@ -30,8 +29,7 @@
 					<div ngbDropdownMenu class="dropdown-menu dropdown-menu-right">
 						<a class="dropdown-item" href="javascript:;"><i class="la la-plus"></i> New Product</a>
 						<a class="dropdown-item" href="javascript:;"><i class="la la-user"></i> New Order</a>
-						<a class="dropdown-item" href="javascript:;"><i class="la la-cloud-download"></i> New
-							Download</a>
+						<a class="dropdown-item" href="javascript:;"><i class="la la-cloud-download"></i> New Download</a>
 						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" href="javascript:;"><i class="la la-cog"></i> Settings</a>
 					</div>
