--- a/gold-admin-frontend/src/assets/sass/global/layout/aside/_aside.scss
+++ b/gold-admin-frontend/src/assets/sass/global/layout/aside/_aside.scss
@@ -7,21 +7,66 @@
 
 // Aside
 .kt-aside {
-	background-color: $kt-aside-bg-color;
-	box-shadow: 13px -2px 27px -12px rgba(41, 50, 66, 0.075);
 	width: kt-get($kt-aside-config, base, default, width);
 	transition: kt-get($kt-aside-config, base, minimize, transition);
 
-	// Scrollbar
-	@include kt-perfect-scrollbar-skin(#e0e2f0);
-
 	// Menu
 	.kt-aside-menu {
-		margin: 0;
-		padding: 15px 0;
+		margin: 15px 0;
 
 		.ps__rail-y {
-			right: 2px;
+			right: 3px;
+		}
+	}
+
+	// Footer
+	.kt-aside__footer {
+		.kt-aside__footer-nav {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			padding: 7px 30px;
+		}
+
+		.kt-aside__footer-item {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+
+		.btn {
+			height: 45px;
+	    	width: 45px;
+			background-color: #f0f0f6;
+			border-radius: 50%;
+
+			i {
+				@include kt-transition();
+				font-size: 1.4rem;
+				color: kt-brand-color();
+			}
+
+			&:hover {
+				background-color: kt-brand-color();
+
+				i {
+					@include kt-transition();
+					color: kt-brand-color(inverse);
+				}
+			}
+		}
+
+		// Minimize
+		.kt-aside--minimize & {
+			.dropdown.dropdown-inline,
+			.btn {
+				display: none;
+
+				&:last-child {
+					display: inline-block;
+					opacity: 0;
+				}
+			}
 		}
 	}
 }
@@ -32,7 +77,7 @@
 		// Fixed
 		.kt-aside--fixed & {
 			position: fixed;
-			top: kt-get($kt-header-config, base, desktop, default, height);
+			top: 0;
 			bottom: 0;
 			left: 0;
 			z-index: kt-get($kt-aside-config, base, fixed, zindex);
@@ -41,10 +86,6 @@
 		.kt-aside--static & {
 			position: relative;
 			z-index: 1;
-
-			.kt-aside-menu {
-				margin-top: kt-get($kt-header-config, base, desktop, default, height);
-			}
 		}
 
 		.kt-header--fixed.kt-aside--static & {
@@ -59,7 +100,7 @@
 
 		.kt-aside--minimizing & {
 			overflow: hidden;
-			
+
 			.kt-aside-menu {
 				.kt-menu__nav  {
 					width: kt-get($kt-aside-config, base, default, width);
@@ -79,6 +120,11 @@
 			transition: kt-get($kt-aside-config, base, minimize, transition);
 		}
 
+		.kt-header {
+			transition: kt-get($kt-aside-config, base, minimize, transition);
+			left: kt-get($kt-aside-config, base, minimize, width);
+		}
+
 		.kt-wrapper {
 			transition: kt-get($kt-aside-config, base, minimize, transition);
 			padding-left: kt-get($kt-aside-config, base, minimize, width);
@@ -86,9 +132,18 @@
 	}
 }
 
+/* Push mobile aside down the mobile header when it's toggled
+@include kt-tablet-and-mobile {
+	.kt-aside {
+		.kt-aside--fixed & {
+			top: kt-get($kt-header-config, base, mobile, self, default, height);
+		}
+	}
+}
+*/
+
 // Build aside menu
 @include kt-menu-ver-build-layout(kt-get($kt-aside-config, menu));
-@include kt-menu-ver-build-skin(kt-get($kt-aside-config, menu), default);
 
 // Aside offcanvas panel for mobile mode
 @include kt-offcanvas-build(kt-aside, tablet-and-mobile, kt-get($kt-aside-config, base, offcanvas-mobile));
