--- a/gold-admin-frontend/src/assets/sass/global/layout/header/_menu.scss
+++ b/gold-admin-frontend/src/assets/sass/global/layout/header/_menu.scss
@@ -7,84 +7,99 @@
 
 // Desktop Mode
 @include kt-menu-hor-build-layout(kt-get($kt-header-config, menu, desktop));
-@include kt-menu-hor-build-skin(kt-get($kt-header-config, menu, desktop), default);
 
 // Tablet & Mobile Mode
 @include kt-menu-ver-build-layout(kt-get($kt-header-config, menu, tablet-and-mobile));
-@include kt-menu-ver-build-skin(kt-get($kt-header-config, menu, tablet-and-mobile), default);
+//@include kt-menu-ver-build-skin(kt-get($kt-header-config, menu, tablet-and-mobile), default);
 
 // Header Menu Mobile Offcanvas
 @include kt-offcanvas-build(kt-header-menu-wrapper, tablet-and-mobile, kt-get($kt-header-config, menu, offcanvas-mobile));
 
-// Desktop Mode
 @include kt-desktop {
-	// Header menu
+	.kt-header-menu-wrapper {
+		body:not(.kt-aside--enabled) & {
+			display: flex;
+			flex-direction: row;
+			align-items: stretch;
+
+			.kt-header-logo {
+				padding: 0 kt-get($kt-page-padding, desktop);
+				display: flex;
+				align-items: center;
+				margin-right: 25px;
+			}
+		}
+	}
+
 	.kt-header-menu {
-		// Menu nav
 		.kt-menu__nav {
-			// Menu item
 			> .kt-menu__item {
 				&:first-child {
 					padding-left: 0;
 				}
 
-				// Menu link
-				> .kt-menu__link {
-					padding: 0.75rem 1.25rem;
-
-					@include kt-rounded {
-						border-radius: 40px;
-					}
-
-					> .kt-menu__link-text {
-						color: #8a88a2;
-						font-weight: 500;
-					}
-
-					> .kt-menu__link-icon {
-						color: #8a88a2;
-					}
-
-					> .kt-menu__hor-arrow {
-						color: #8a88a2;
-					}				
-				}
-
-				// Menu submenu	
 				> .kt-menu__submenu {
-					> .kt-menu__subnav {
-						border-top-left-radius: 0;
-						border-top-right-radius: 0;
-					}
+					border-top-left-radius: 0;
+					border-top-right-radius: 0;
 				}
+			}
+		}
 
-				// Menu item states
-				&.kt-menu__item--active,
-				&.kt-menu__item--here {
+		// Layouts
+		&.kt-header-menu--layout-default {
+			.kt-menu__nav {
+				> .kt-menu__item {
 					> .kt-menu__link {
-						background-color: $kt-brand-hover-color;
-					}
-				}
+						padding: 0.65rem 1.1rem;
 
-				&:hover,
-				&.kt-menu__item--active,
-				&.kt-menu__item--here,
-				&.kt-menu__item--hover {
-					> .kt-menu__link {
-						> .kt-menu__link-text {
-							color: kt-brand-color();
-						}
-
-						> .kt-menu__link-icon {
-							color: kt-brand-color();
-						}
-
-						> .kt-menu__hor-arrow {
-							color: kt-brand-color();
+						@include kt-not-rounded {
+							border-radius: 0 !important;
 						}
 					}
 				}
 			}
+		}
+
+		&.kt-header-menu--layout-tab {
+			.kt-menu__nav {
+				> .kt-menu__item {
+					margin: 0 1rem;
+					align-items: stretch;
+
+					> .kt-menu__link {
+						align-items: stretch;
+						background-color: transparent !important;
+						padding: 0 !important;
+						border-bottom: 1px solid transparent;
+						margin-bottom: -1px;
+
+						@include kt-rounded {
+							border-radius: 0 !important;
+						}
+					}
+
+					&:first-child {
+						margin-left: 0 !important;
+					}
+
+					&.kt-menu__item--here,
+					&.kt-menu__item--active {
+						> .kt-menu__link {
+							background-color: transparent !important;
+							border-bottom: 1px solid kt-brand-color() !important;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+@include kt-tablet-and-mobile {
+	.kt-header-menu-wrapper {
+
+		.kt-header-logo {
+			display: none;
 		}
 	}
 }
