--- a/gold-admin-frontend/src/assets/sass/global/layout/brand/_brand.scss
+++ b/gold-admin-frontend/src/assets/sass/global/layout/brand/_brand.scss
@@ -11,6 +11,7 @@
 	flex-direction: row;
 	padding: 8px kt-get($kt-page-padding, desktop) 0;
 	height: kt-get($kt-header-config, base, desktop, default, height);
+	background-color: kt-get($kt-header-config, base, desktop, default, bg-color);
 
 	.kt-aside__brand-logo {
 		display: flex;
