--- a/gold-admin-frontend/src/app/views/theme/header/header.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/header.component.html
@@ -17,7 +17,7 @@
 					Augmont Gold Loan
 				</h3>
 			</div>
-			<div class="offset-5 col-1" >
+			<div class="col-6" >
 					<kt-topbar></kt-topbar>
 			</div>
 		</div>
