--- a/gold-admin-frontend/src/assets/sass/global/layout/header/_config.scss
+++ b/gold-admin-frontend/src/assets/sass/global/layout/header/_config.scss
@@ -10,8 +10,9 @@ $kt-header-config: (
 	base: (
 		desktop: (
 			default: (
-				height: 65px,
-				bg-color: #2b2a35,
+				height: 85px,
+				60:60px,
+				bg-color: #454D67,
 				shadow: 0px 0px 40px 0px rgba(82,63,105,0.1)
 			),
 			fixed: (
