--- a/gold-admin-frontend/src/app/views/pages/admin-account/change-password/change-password.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin-account/change-password/change-password.component.html
@@ -45,8 +45,8 @@
                                     </mat-error>
                         </mat-form-field>
                         <div class="kt-margin-t-15">
-                                <button mat-raised-button color="primary" class="kt-margin-r-10" type="submit">Submit</button>
-                                <button mat-raised-button color="warn" type="reset">Reset</button>
+                            <kt-button [type]="'submit'" [value]="'Submit'" (action)="action($event)" class="kt-margin-r-10"></kt-button>
+                            <kt-button [type]="'reset'" [value]="'Reset'" (action)="action($event)"></kt-button>
                         </div>
                     </form>
                 </kt-portlet-body>
