--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -1,5 +1,14 @@
 <!-- begin:: Header Topbar -->
-<div class="kt-header__topbar">
-	
+<div class="kt-header__topbar kt-margin-t-10 ">
+    <div class="row justify-content-center">
+        <div class="col-4">
+        </div>
+        <div class="col-4">
+            <kt-search></kt-search>
+        </div>
+        <div class="col-4">
+            <kt-filter></kt-filter>
+        </div>
+    </div>
 </div>
 <!-- end:: Header Topbar -->
