--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -48,3 +48,7 @@
 .position-static {
 	position: static;
 }
+.success-button {
+	color: #fff !important;
+	background-color: rgb(24, 179, 24) !important;
+}
