--- a/gold-admin-frontend/src/app/views/partials/components/button/button.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/button/button.component.scss
@@ -1,6 +1,10 @@
 :host{
     .submit{
         background-color: #454D67 !important;
+        
+    }
+    button:disabled {
+        background-color: rgb(224,224,224) !important;    
     }
     .reset{
         background-color: #C43330 !important;
