--- a/gold-admin-frontend/src/app/views/pages/admin-account/change-password/change-password.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin-account/change-password/change-password.component.html
@@ -16,14 +16,14 @@
                         </mat-form-field>
                         <mat-form-field class="w-100">
                             <mat-label>New Password</mat-label>
-                            <input matInput placeholder="Old Password" type="password" formControlName="password">
-                            <mat-error *ngIf="isControlHasError('password','required')">
+                            <input matInput placeholder="Old Password" type="password" formControlName="newPassword">
+                            <mat-error *ngIf="isControlHasError('newPassword','required')">
                                 <strong>Enter New Password</strong>
                             </mat-error>
-                            <mat-error *ngIf="isControlHasError('password','minlength')">
+                            <mat-error *ngIf="isControlHasError('newPassword','minlength')">
                                 <strong>{{ 'AUTH.VALIDATION.MIN_LENGTH_FIELD' | translate }} 8</strong>
                             </mat-error>
-                            <mat-error *ngIf="isControlHasError('password','maxlength')">
+                            <mat-error *ngIf="isControlHasError('newPassword','maxlength')">
                                 <strong>{{ 'AUTH.VALIDATION.MAX_LENGTH_FIELD' | translate }} 100</strong>
                             </mat-error>
                         </mat-form-field>
@@ -45,8 +45,8 @@
                                     </mat-error>
                         </mat-form-field>
                         <div class="kt-margin-t-15">
-                            <kt-button [type]="'submit'" [value]="'Submit'" (action)="action($event)" class="kt-margin-r-10"></kt-button>
-                            <kt-button [type]="'reset'" [value]="'Reset'" (action)="action($event)"></kt-button>
+                            <kt-button [type]="'submit'" [value]="'Submit'" class="kt-margin-r-10"></kt-button>
+                            <kt-button [type]="'reset'" [value]="'Reset'"></kt-button>
                         </div>
                     </form>
                 </kt-portlet-body>
