--- a/gold-admin-frontend/src/app/views/partials/components/search/search.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/search/search.component.html
@@ -1,1 +1,3 @@
-<p>search works!</p>
+<!-- <mat-form-field> -->
+    <input type="text" class="form-control" placeholder="enter text here">
+<!-- </mat-form-field> -->
