--- a/gold-admin-frontend/src/app/views/pages/customer-management/customer-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-management/customer-management.component.html
@@ -1,5 +1,5 @@
 <kt-portlet>
-    <kt-portlet-header [title]="'Branches List'" [class]="'kt-portlet__head--lg'" [viewLoading$]="dataSource.loading$">
+    <kt-portlet-header [title]="'All Leads'" [class]="'kt-portlet__head--lg'" [viewLoading$]="dataSource.loading$">
 
         <ng-container ktPortletTools>
             <!-- <button (click)="addLead()" mat-raised-button matTooltip="Create new Lead" color="primary" type="button">
