--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -7,7 +7,7 @@
         <div class="col-6">
             <kt-search *ngIf="showInput"></kt-search>
             <kt-button [value]='value1' [type]='type1' class="kt-margin-r-10 kt-margin-l-10"></kt-button>
-            <kt-button [value]='value2' [type]='type2'></kt-button>
+            <kt-button [value]='value2' [type]='type2' (click)="action($event)"></kt-button>
         </div>
         <div class="col-2 text-right">
             <kt-button *ngIf="rightButton" [value]='value3' [type]='type3'></kt-button>
